fix: spacing issues in form

--- a/site/assets/src/scss/utilities/sizes.scss
+++ b/site/assets/src/scss/utilities/sizes.scss
@@ -5,3 +5,7 @@ $widths: (100, 60, 40);
         width: $width * 1%;
     }
 }
+
+.fit-content {
+    width: fit-content;
+}
